--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -449,23 +449,23 @@ div#wheelTwo {
     background: url('../images/sprites.png') -1032px -114px no-repeat;
 }
 
-/* Contact Footer */
+/* Contact Info */
 
-div.contactIcons {
+div.contactInfo {
 
     float: right;
-    margin-top: -76px;
+    margin-top: -68px;
     text-align: right;
 }
 
-div.contactIcons a {
+div.contactInfo a {
 
     text-decoration: none;
     font-size: 8pt;
     color: #00aeef;
 }
 
-div.contactIcons a:hover {
+div.contactInfo a:hover {
 
     color: #ffffff;
 }
@@ -483,6 +483,12 @@ div#barOne, div#barTwo, div#barThree, div#barFour, div#barFive, div#barSix, div#
     background: black;
     border: 4px solid white;
     border-radius: 8px
+}
+
+.greenBg {
+
+    background: rgba(0,255,0, 0.85) !important;
+    
 }
 
 div#barOne, div#barTwo, div#barThree {
