--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -50,8 +50,6 @@ table {
 /* Font Embed */
 
 .designer-block { font-family: 'designer_blockregular', monospace; }
-.borg { font-family: 'borgnormal', monospace; }
-.ferengi { font-family: 'ferengi-t_milleryw6uyi_', monospace; }
 
 @font-face {
         font-family: 'designer_blockregular';
@@ -62,28 +60,6 @@ table {
              url('../fonts/DesignerBlock/desib___-webfont.svg#designer_blockregular') format('svg');
         font-weight: normal;
         font-style: normal;
-}
-
-@font-face {
-       font-family: 'borgnormal';
-       src: url('../fonts/Borg/borg-webfont.eot');
-       src: url('../fonts/Borg/borg-webfont.eot?#iefix') format('embedded-opentype'),
-            url('../fonts/Borg/borg-webfont.woff') format('woff'),
-            url('../fonts/Borg/borg-webfont.ttf') format('truetype'),
-            url('../fonts/Borg/borg-webfont.svg#borgnormal') format('svg');
-       font-weight: normal;
-       font-style: normal;
-}
-
-@font-face {
-       font-family: 'ferengi-t_milleryw6uyi_';
-       src: url('../fonts/Ferengi/ferengi-tmiller-webfont.eot');
-       src: url('../fonts/Ferengi/ferengi-tmiller-webfont.eot?#iefix') format('embedded-opentype'),
-            url('../fonts/Ferengi/ferengi-tmiller-webfont.woff') format('woff'),
-            url('../fonts/Ferengi/ferengi-tmiller-webfont.ttf') format('truetype'),
-            url('../fonts/Ferengi/ferengi-tmiller-webfont.svg#ferengi-t_milleryw6uyi_') format('svg');
-       font-weight: normal;
-       font-style: normal;
 }
 
 @charset "UTF-8";
@@ -142,50 +118,45 @@ table {
 
 body {
 
-    font-family: Lucida Grande, sans-serif;
+    font-family: Lucida Grande, Arial, sans-serif;
     color: #ffffff;
 }
 
-.multiplebgs body.background {
+body.background {
 	
 	display: block;
 	position: relative;
 	
 	width: 100%;
     
-    background-color: rgba(0,0,0, 0.85);
-
-	background:
-        url('../images/connections.png') center top no-repeat fixed,
-        url('../images/use_your_illusion.png'); 
+    background: url('../images/use_your_illusion.png'); 
 
 }
 
-.no-multiplebgs body.background {
-	
-	display: block;
-	position: relative;
-	
-	width: 100%;
-    
-	background: #000000 url('../images/use_your_illusion.png') 0 0; 
-}
+/* Clear Floats */
 
-.clearBoth {
+.clearFix:after {
 
+    content: ".";
+    display: block;
+    height: 0;
     clear: both;
+    visibility: hidden; 
 }
 
 div.wrapper {
 
-    width: 1024px;
+    width: 800px;
     margin: 0 auto;
 }
 
-h1 {
+/* Heading */
 
-    font-size: 52pt;
-    text-align: right;
+h1.title {
+
+    font-size: 2em;
+    float: left;
+    font-weight: bold;
 }
 
 span.highlight {
@@ -193,262 +164,8 @@ span.highlight {
     color: #00aeef;
 }
 
-p.ferengi {
-
-    color: #ffffff;
-    font-size: 20pt;
-    text-align: right;
-    padding: 20px 0 0 0;
-}
-
-p.borg {
-   
-    color: #00aeef;
-    font-size: 22pt;
-    line-height: 18pt;
-    text-align: right;
-    padding: 0 0 0 0;
-}
-
 .blueColor a{
     color: #00aeef;
-}
-
-div.mainWindow {
-
-    display: block;
-    position: relative;
-
-    float: right;
-
-    width: 590px;
-    height: 440px;
-    
-    //background: url('../images/sprites.png') -383px -15px  no-repeat;
-
-    background: black;
-
-    border: 4px solid white;
-    border-radius: 8px;
-
-    margin-top: 15px;
-    padding: 20px;
-}
-
-div.mainWindow p.ferengi {
-
-    font-size: 10pt;
-    padding: 0;
-    line-height: 24pt;
-}
-
-div.sideWindow div#sideWindowOne {
-
-    display: block;
-    position: relative;
-
-    width: 292px;
-    height: 106px;
-
-    padding: 20px;
-
-    background: black url('../images/piratehook_2.png') -200px -190px no-repeat;
-    border: 4px solid white;
-    border-radius: 8px;
-}
-
-div.sideWindow div#sideWindowTwo {
-
-    display: block;
-    position: relative;
-
-    width: 292px;
-    height: 73px;
-
-    padding: 20px;
-    margin-top: 20px;
-
-    background: black url('../images/oranda_1.png') -280px -220px no-repeat;;
-    border: 4px solid white;
-    border-radius: 8px;
-}
-
-div.sideWindow div#sideWindowThree {
-
-    display: block;
-    position: relative;
-
-    width: 292px;
-    height: 73px;
-
-    padding: 20px;
-    margin-top: 70px;
-
-    background: black url('../images/chimpsinspace_1.png') -180px 0px no-repeat;
-    border: 4px solid white;
-    border-radius: 8px;
-}
-
-div.sideWindow div p.ferengi {
-
-    font-size: 10pt;
-    padding-top: 0;
-}
-
-div#sideWindowOne, div#sideWindowTwo, div#sideWindowThree {
-
-    float: left;
-}
-
-/* Adding tint to windows on hover */
-
-.tintMain {
-
-    position: relative;
-    float: right;
-    height: 499px;
-    width: 634px;
-    cursor: pointer;
-}
-
-.tintMain:after {
-
-    content: "";
-    display: block;
-    position: absolute;
-    top: 19px;
-    right: 4px;
-    bottom: 0;
-    left: 0;
-    background: rgba(0,0,0, 0.2);
-    border-radius: 4px;
-    -moz-transition: all .3s linear;
-    -webkit-transition: all .3s linear;
-    -ms-transition: all .3s linear;
-    -o-transition: all .3s linear;
-    transition: all .3s linear;
-}
-
-.tintMain:hover:after {
-
-    background: none;
-}
-
-.tintSide {
-
-    position: relative;
-    cursor: pointer;
-}
-
-.tintSide:after {
-
-    content: "";
-    display: block;
-    position: absolute;
-    top: 4px;
-    right: 0;
-    bottom: 0;
-    left: 4px;
-    background: rgba(0,0,0, 0.2);
-    border-radius: 4px;
-    -moz-transition: all .3s linear;
-    -webkit-transition: all .3s linear;
-    -ms-transition: all .3s linear;
-    -o-transition: all .3s linear;
-    transition: all .3s linear;
-}
-
-.tintSide:hover:after {
-
-    background: none;
-}
-
-.tintSide.t1 {
-
-    height: 150px;
-    width: 336px;
-}
-
-.tintSide.t2 {
-
-    height: 141px;
-    width: 336px;
-}
-
-.tintSide.t2:after {
-
-    top: 28px;
-}
-
-.tintSide.t3 {
-
-    height: 191px;
-    width: 336px;
-}
-
-.tintSide.t3:after {
-
-    top: 78px;
-}
-
-.tintBar {
-
-    position: relative;
-    cursor: pointer;
-
-    height: 26px;
-    width: 94px;
-
-    margin: 0 0 14px 0;
-}
-
-.tintBar:after {
-
-    content: "";
-    display: block;
-    position: absolute;
-    top: 4px;
-    right: 0;
-    bottom: 0;
-    left: 4px;
-    border-radius: 2px;
-    -moz-transition: all .3s linear;
-    -webkit-transition: all .3s linear;
-    -ms-transition: all .3s linear;
-    -o-transition: all .3s linear;
-    transition: all .3s linear;
-}
-
-.tintBar:hover:after {
-
-    background: rgba(255,255,0, 0.85);
-}
-/* Positioning wheels */
-
-div#wheelOne {
-
-    display: block;
-    position: relative;
-    
-    height: 56px;
-    width: 56px;
-
-    margin: -69px 0 15px 120px;
-
-    background: url('../images/sprites.png') -1036px -24px no-repeat;
-}
-
-div#wheelTwo {
-
-    display: block;
-    position: relative;
-
-    height: 66px;
-    width: 66px;
-
-    margin: -152px 0 0 394px;
-
-    background: url('../images/sprites.png') -1032px -114px no-repeat;
 }
 
 /* Contact Info */
@@ -456,7 +173,6 @@ div#wheelTwo {
 div.contactInfo {
 
     float: right;
-    margin-top: -68px;
     text-align: right;
 }
 
@@ -472,58 +188,68 @@ div.contactInfo a:hover {
     color: #ffffff;
 }
 
-/* Positioning energy bars */
+/* Content Screens */
 
-div#barOne, div#barTwo, div#barThree, div#barFour, div#barFive, div#barSix, div#barSeven {
+div.contentWrapper {
 
+    width: 100%;
+    margin: 24px auto 0 auto;
+}
+
+div#screenOne, div#screenTwo, div#screenThree, div#screenFour, div#screenFive, div#screenSix {
+   
     display: block;
     position: relative;
+    float: left;
 
-    height: 22px;
-    width: 90px;
-    
+    width: 200px;
+    height: 100px;
+
+    padding: 20px;
+    margin: 0 18px 20px 0;
+
     background: black;
     border: 4px solid white;
-    border-radius: 8px
+    border-radius: 8px;
+
 }
 
-.greenBg {
+div.screenWindow div p.ferengi {
 
-    background: rgba(0,255,0, 0.85) !important;
-    
+    font-size: 10pt;
+    padding-top: 0;
 }
 
-div#barOne, div#barTwo, div#barThree {
 
-    margin-bottom: 10px;
+/* Adding tint to windows on hover */
+
+.tint {
+
+    position: relative;
+    float: left;
+    cursor: pointer;
 }
 
-div#barFour, div#barFive, div#barSix, div#barSeven {
-    
-    margin-top: 10px;
+.tint:after {
+
+    content: "";
+    display: block;
+    position: absolute;
+    top: 4px;
+    right: 4px;
+    bottom: 0;
+    left: 0;
+    background: rgba(0,0,0, 0.2);
+    border-radius: 4px;
+    -moz-transition: all .3s linear;
+    -webkit-transition: all .3s linear;
+    -ms-transition: all .3s linear;
+    -o-transition: all .3s linear;
+    transition: all .3s linear;
 }
 
-div.barsTop {
+.tint:hover:after {
 
-    margin-top: -107px;
+    background: none;
 }
 
-/* CSS 3D Transforms */
-
-div.spin {
-
-    -moz-transition: all 1.5s ease-in-out;
-    -webkit-transition: all 1.5s ease-in-out;
-    -o-transition: all 1.5s ease-in-out;
-    -ms-transition: all 1.5s ease-in-out;
-    transition: all 1.5s ease-in-out;
-}
-
-div.spin:hover {
-   
-    -moz-transform: rotate(360deg);
-    -webkit-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
-    -ms-transform: rotate(360deg);
-    transform: rotate(360deg);
-}
