--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -180,6 +180,7 @@ h2.highlight {
 
 div.contactInfo {
 
+    margin-top: 16px;
     float: right;
     text-align: right;
 }
@@ -189,7 +190,7 @@ div.contactInfo a {
     text-decoration: none;
     font-size: 8pt;
     color: #0099ff;
-    line-height: 20pt;
+    line-height: 12pt;
 }
 
 div.contactInfo a:hover {
@@ -212,11 +213,11 @@ div.tintedWindow{
     float: left;
 
     width: 244px;
-    height: 140px;
+    height: 188px;
 
     margin: 0 18px 36px 0;
 
-    background: #0099ff;
+    background: #0099ff url('../images/piratehook_2.png') -254px -210px no-repeat;
     border: 4px solid white;
     
     border-radius: 8px;
@@ -239,6 +240,38 @@ div.screenWindow {
     overflow: hidden;
 }
 
+div.description {
+
+    display: block;
+
+    text-align: center;
+    background: rgba(0,0,0, 0.4);
+
+    margin-top: 125px;
+    padding: 10px;
+
+    -moz-border-radius: 0 0 4px 4px;
+    -webkit-border-radius: 0 0 4px 4px;
+    border-radius: 0 0 4px 4px;
+}
+
+div.description div.projectTitle {
+
+    font-size: 1.6em;
+}
+
+div.description div.projectMethods {
+
+    font-size: 0.8em;
+    font-style: italic;
+    line-height: 1.4em;
+}
+
+div.hidden {
+
+    display: none;
+}
+
 /* Adding tint to windows on hover */
 
 .tint {
@@ -255,7 +288,7 @@ div.screenWindow {
     display: block;
     position: absolute;
 
-    height: 140px;
+    height: 188px;
     width: 244px;
 
     top: 4px;
@@ -264,8 +297,8 @@ div.screenWindow {
     left: 4px;
    
     
-    background: rgba(255,255,255, 0.2)  url('../images/shl.png');
-    opacity: 0.2;
+    background: rgba(0,0,0, 0.3)  url('../images/shl.png');
+    opacity: 0.25;
 
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
