--- a/fancybox/source/jquery.fancybox.css
+++ b/fancybox/source/jquery.fancybox.css
@@ -190,7 +190,7 @@
 
 .fancybox-title {
 	visibility: hidden;
-	font: normal 13px/20px "Helvetica Neue",Helvetica,Arial,sans-serif;
+	font: normal 11pt;
 	position: relative;
 	text-shadow: none;
 	z-index: 8050;
