--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -49,7 +49,7 @@ table {
 
 /* Font Embed */
 
-.crimson { font-family: "Crimson", "Palatino", "Hoefler Text", "Georgia", "Times New Roman", "Baskerville", serif; ;}
+.crimson { font-family: "Crimson", "Palatino", "Hoefler Text", "Georgia", "Times New Roman", "Baskerville", serif; 1em;}
 
 .hattori-hanzo { font-family: "Hattori Hanzo", "Helvetica", "Arial", "Lucida Grande", "Gill Sans", "Verdana", sans-serif; font-size: 0.925em;}
 
@@ -455,11 +455,24 @@ div.description div.projectTitle {
     line-height: 22pt;
 }
 
+.no-fontface div.description div.projectTitle {
+
+    font-family: "Palatino", "Hoefler Text", "Georgia", "Times New Roman", "Baskerville", serif;
+    font-size: 16pt;
+    line-height: 20pt;
+}
+
 div.description div.projectMethods {
 
     font-size: 9pt;
     font-style: italic;
     line-height: 18pt;
+}
+
+.no-fontface div.description div.projectTitle {
+
+    font-family: "Helvetica", "Arial", "Lucida Grande", "Gill Sans", "Verdana", sans-serif;
+    font-size: 8pt;
 }
 
 div.hidden {
