--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -443,9 +443,19 @@ div.description {
     border-radius: 0 0 4px 4px;
 }
 
+.no-fontface div.description {
+
+    margin-top: -70px;
+}
+
 div#s5 div.description {
 
     margin-top: -102px;
+}
+
+.no-fontface div#s5 div.description {
+
+    margin-top: -96px;
 }
 
 div.description div.projectTitle {
@@ -457,7 +467,7 @@ div.description div.projectTitle {
 
 .no-fontface div.description div.projectTitle {
 
-    font-family: "Palatino", "Hoefler Text", "Georgia", "Times New Roman", "Baskerville", serif;
+    font-family: serif;
     font-size: 16pt;
     line-height: 20pt;
 }
@@ -469,9 +479,9 @@ div.description div.projectMethods {
     line-height: 18pt;
 }
 
-.no-fontface div.description div.projectTitle {
+.no-fontface div.description div.projectMethods {
 
-    font-family: "Helvetica", "Arial", "Lucida Grande", "Gill Sans", "Verdana", sans-serif;
+    font-family: sans-serif;
     font-size: 8pt;
 }
 
