--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -49,80 +49,6 @@ table {
 
 /* Font Embed */
 
-.crimson { font-family: "Crimson", "Palatino", "Hoefler Text", "Georgia", "Times New Roman", "Baskerville", serif; 1em;}
-
-.hattori-hanzo { font-family: "Hattori Hanzo", "Helvetica", "Arial", "Lucida Grande", "Gill Sans", "Verdana", sans-serif; font-size: 0.925em;}
-
-@font-face {
-    font-family: 'Crimson';
-    src: url('../fonts/Crimson-Bold-webfont.eot');
-    src: local('☺'), url('../fonts/Crimson-Bold-webfont.woff') format('woff'), url('../fonts/Crimson-Bold-webfont.ttf') format('truetype'), url('../fonts/Crimson-Bold-webfont.svg#webfontX4pGz9fc') format('svg');
-    font-weight: 700;
-    font-style: normal;
-}
-
-
-@font-face {
-    font-family: 'Crimson';
-    src: url('../fonts/Crimson-BoldItalic-webfont.eot');
-    src: local('☺'), url('../fonts/Crimson-BoldItalic-webfont.woff') format('woff'), url('../fonts/Crimson-BoldItalic-webfont.ttf') format('truetype'), url('../fonts/Crimson-BoldItalic-webfont.svg#webfontX4pGz9fc') format('svg');
-    font-weight: 700;
-    font-style: italic;
-}
-
-
-@font-face {
-    font-family: 'Crimson';
-    src: url('../fonts/Crimson-Italic-webfont.eot');
-    src: local('☺'), url('../fonts/Crimson-Italic-webfont.woff') format('woff'), url('../fonts/Crimson-Italic-webfont.ttf') format('truetype'), url('../fonts/Crimson-Italic-webfont.svg#webfontX4pGz9fc') format('svg');
-    font-weight: 400;
-    font-style: italic;
-}
-
-
-@font-face {
-    font-family: 'Crimson';
-    src: url('../fonts/Crimson-Roman-webfont.eot');
-    src: local('☺'), url('../fonts/Crimson-Roman-webfont.woff') format('woff'), url('../fonts/Crimson-Roman-webfont.ttf') format('truetype'), url('../fonts/Crimson-Roman-webfont.svg#webfontX4pGz9fc') format('svg');
-    font-weight: 400;
-    font-style: normal;
-}
-
-
-@font-face {
-    font-family: 'Crimson';
-    src: url('../fonts/Crimson-Semibold-webfont.eot');
-    src: local('☺'), url('../fonts/Crimson-Semibold-webfont.woff') format('woff'), url('../fonts/Crimson-Semibold-webfont.ttf') format('truetype'), url('../fonts/Crimson-Semibold-webfont.svg#webfontX4pGz9fc') format('svg');
-    font-weight: 400;
-    font-style: normal;
-}
-
-
-@font-face {
-    font-family: 'Crimson';
-    src: url('../fonts/Crimson-SemiboldItalic-webfont.eot');
-    src: local('☺'), url('../fonts/Crimson-SemiboldItalic-webfont.woff') format('woff'), url('../fonts/Crimson-SemiboldItalic-webfont.ttf') format('truetype'), url('../fonts/Crimson-SemiboldItalic-webfont.svg#webfontX4pGz9fc') format('svg');
-    font-weight: 400;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'Hattori Hanzo';
-    src: url('../fonts/Hattori_Hanzo-webfont.eot');
-    src: local('☺'), url('../fonts/Hattori_Hanzo-webfont.woff') format('woff'), url('../fonts/Hattori_Hanzo-webfont.ttf') format('truetype'), url('../fonts/Hattori_Hanzo-webfont.svg#webfontX4pGz9fc') format('svg');
-    font-weight: 200;
-    font-style: normal;
-}
-
-
-@font-face {
-    font-family: 'Hattori Hanzo';
-    src: url('../fonts/Hattori_Hanzo_Italic-webfont.eot');
-    src: local('☺'), url('../fonts/Hattori_Hanzo_Italic-webfont.woff') format('woff'), url('../fonts/Hattori_Hanzo_Italic-webfont.ttf') format('truetype'), url('../fonts/Hattori_Hanzo_Italic-webfont.svg#webfontX4pGz9fc') format('svg');
-    font-weight: 200;
-    font-style: italic;
-}
-
 @charset "UTF-8";
 
 @font-face {
@@ -237,7 +163,7 @@ table {
 
 body {
 
-    font-family: "Hattori Hanzo", "Helvetica", "Arial", "Lucida Grande", "Gill Sans", "Verdana", sans-serif;
+    font-family: "Helvetica", "Arial", "Lucida Grande", "Gill Sans", "Verdana", sans-serif;
     color: #ffffff;
 }
 
@@ -263,7 +189,7 @@ a, a:visited {
     text-decoration: none;
 }
 
-a: hover {
+a:hover {
 
     color: #ffffff;
 }
@@ -300,6 +226,11 @@ div.headingBg, div.footerBg {
 }
 */
 
+h1, h2, h3, h4, h5, h6 {
+
+    font-family: "Georgia", "Times New Roman", "Baskerville", serif;
+}
+
 .title {
 
     display: block;
@@ -331,9 +262,9 @@ div.contactInfo {
 div.contactInfo a {
 
     text-decoration: none;
-    font-size: 0.9em;
+    font-size: 0.7em;
     color: #0099ff;
-    line-height: 1.6em;
+    line-height: 1.8em;
 }
 
 div.contactInfo a:hover {
@@ -435,6 +366,9 @@ div.description {
     text-align: center;
     background: rgba(0,0,0, 0.4);
 
+    width: 224px;
+    height: 53px;
+
     margin-top: -73px;
     padding: 10px;
 
@@ -443,46 +377,25 @@ div.description {
     border-radius: 0 0 4px 4px;
 }
 
-.no-fontface div.description {
-
-    margin-top: -70px;
-}
-
 div#s5 div.description {
 
     margin-top: -102px;
-}
-
-.no-fontface div#s5 div.description {
-
-    margin-top: -96px;
+    height: 82px;
 }
 
 div.description div.projectTitle {
 
-    font-family: "Crimson", "Palatino", "Hoefler Text", "Georgia", "Times New Roman", "Baskerville", serif;
-    font-size: 18pt;
-    line-height: 22pt;
-}
-
-.no-fontface div.description div.projectTitle {
-
-    font-family: serif;
+    font-family: "Georgia", serif;
     font-size: 16pt;
-    line-height: 20pt;
+    line-height: 22pt;
 }
 
 div.description div.projectMethods {
 
-    font-size: 9pt;
+    font-family: sans-serif;
+    font-size: 11px;
     font-style: italic;
     line-height: 18pt;
-}
-
-.no-fontface div.description div.projectMethods {
-
-    font-family: sans-serif;
-    font-size: 8pt;
 }
 
 div.hidden {
@@ -538,6 +451,7 @@ div.hidden {
 
 div.aboutMe h1 {
 
+    font-family: "Georgia", "Times New Roman", "Baskerville", serif;
     font-size: 1.4em;
     font-style: italic;
     padding-bottom: 12px;
