--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -471,7 +471,7 @@ div.footerWrapper {
 
     width: 800px;
     margin: 0 auto 0 auto;
-    font-size: 10pt;
+    font-size: 0.7em;
     padding: 0 0 24px 0;
 }
 
