--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -216,15 +216,8 @@ div.wrapper {
 div.headingWrapper {
 
     margin: 0 auto;
-    padding: 24px 0;
+    padding: 24px 0 0 0;
 }
-
-/*
-div.headingBg, div.footerBg {
-
-    background: rgba(0,0,0, 0.7)
-}
-*/
 
 h1, h2, h3, h4, h5, h6 {
 
@@ -234,20 +227,19 @@ h1, h2, h3, h4, h5, h6 {
 .title {
 
     display: block;
-    float: left;
 }
 
 .title h1 {
 
-    font-size: 2em;
+    font-size: 4em;
     font-weight: bold;
 }
 
-h2.highlight {
+.title h2 {
 
-    color: #0099ff;
-    font-size: 1.4em;
+    font-size: 2.4em;
     font-style: italic;
+    line-height: 1.4;
 }
 
 /* Contact Info */
@@ -255,14 +247,12 @@ h2.highlight {
 div.contactInfo {
 
     margin-top: 16px;
-    float: right;
-    text-align: right;
 }
 
 div.contactInfo a {
 
     text-decoration: none;
-    font-size: 0.7em;
+    font-size: 0.8em;
     color: #0099ff;
     line-height: 1.8em;
 }
@@ -363,7 +353,7 @@ div.description {
     display: block;
 
     text-align: center;
-    background: rgba(0,0,0, 0.4);
+    background: rgba(0,0,0, 0.6);
 
     width: 224px;
     height: 53px;
@@ -392,8 +382,8 @@ div.description div.projectTitle {
 div.description div.projectMethods {
 
     font-family: sans-serif;
-    font-size: 11px;
-    font-style: italic;
+    font-size: 12px;
+
     line-height: 18pt;
 }
 
@@ -448,12 +438,31 @@ div.hidden {
 
 /* About Section */
 
+div.aboutMe {
+
+    width: 92%;
+    padding: 24px;
+    
+    color: #ffffff;
+    background: rgba(0,0,0,0.2);
+
+    border: 4px solid white;
+
+    -moz-border-radius: 8px;
+    -webkit-border-radius: 8px;
+    border-radius: 8px;
+
+     -mox-box-shadow: rgba(0,0,0,0.2) 5px 5px 3px;   
+     -webkit-box-shadow: rgba(0,0,0,0.2) 5px 5px 3px;
+     box-shadow: rgba(0,0,0,0.2) 5px 5px 3px;
+}
+
 div.aboutMe h1 {
 
     font-family: "Georgia", "Times New Roman", "Baskerville", serif;
     font-size: 1.4em;
     font-style: italic;
-    padding-bottom: 12px;
+  
     text-align: center;
 }
 
@@ -461,14 +470,14 @@ div.aboutMe p {
 
     font-size: 95%;
     line-height: 1.4;
-    padding-bottom: 24px;
+    padding-top: 24px;
 }
 
 /* Footer */
 
 div.footerWrapper { 
 
-    margin: 0 auto 0 auto;
+    margin: 36px auto 0 auto;
     font-size: 0.7em;
     padding: 0 0 24px 0;
 }
@@ -476,6 +485,20 @@ div.footerWrapper {
 div.footerWrapper span {
 
     display: block;
-    text-align: right; 
+
     margin: 0;
+}
+
+/* Media variations */
+
+/* 799px and smaller */
+
+@media (max-width: 799px) {
+
+}
+
+/* 480px and smaller */
+
+@media (max-width: 480px) {
+
 }
