--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -205,7 +205,7 @@ a:hover {
     visibility: hidden; 
 }
 
-div.wrapper {
+.wrapper {
 
     width: 800px;
     margin: 0 auto;
@@ -213,7 +213,7 @@ div.wrapper {
 
 /* Heading */
 
-div.headingWrapper {
+.headingWrapper {
 
     margin: 0 auto;
     padding: 24px 0 0 0;
@@ -244,12 +244,18 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Contact Info */
 
-div.contactInfo {
+.contactInfo {
 
     margin-top: 16px;
 }
 
-div.contactInfo a {
+.contactInfo ul {
+
+    float: left;
+    margin-right: 64px;
+}
+
+.contactInfo a {
 
     text-decoration: none;
     font-size: 0.8em;
@@ -257,19 +263,19 @@ div.contactInfo a {
     line-height: 1.8em;
 }
 
-div.contactInfo a:hover {
+.contactInfo a:hover {
 
     color: #ffffff;
 }
 
 /* Content Screens */
 
-div.contentWrapper {
+.contentWrapper {
 
     margin: 24px auto 0 auto;
 }
 
-div.tintedWindow{
+.tintedWindow{
    
     display: block;
     position: relative;
@@ -292,18 +298,18 @@ div.tintedWindow{
     -webkit-box-shadow: rgba(0,0,0, 0.2) 5px 5px 3px;
 }
 
-div.screenWindow div.lastItem {
+.screenWindow .lastItem {
 
     margin-right: 0;
 }
 
-div.screenWindow {
+.screenWindow {
 
     width: 100%;
     overflow: hidden;
 }
 
-div.tintedWindow a {
+.tintedWindow a {
     
     display: block;
     position: relative;
@@ -438,15 +444,13 @@ div.hidden {
 
 /* About Section */
 
-div.aboutMe {
+.aboutMe {
 
-    width: 92%;
+    width: 744px;
     padding: 24px;
     
     color: #ffffff;
-    background: rgba(0,0,0,0.2);
-
-    border: 4px solid white;
+    background: rgba(0,0,0,0.25);
 
     -moz-border-radius: 8px;
     -webkit-border-radius: 8px;
@@ -475,14 +479,14 @@ div.aboutMe p {
 
 /* Footer */
 
-div.footerWrapper { 
+.footerWrapper { 
 
     margin: 36px auto 0 auto;
     font-size: 0.7em;
     padding: 0 0 24px 0;
 }
 
-div.footerWrapper span {
+.footerWrapper span {
 
     display: block;
 
@@ -495,10 +499,64 @@ div.footerWrapper span {
 
 @media (max-width: 799px) {
 
+    .wrapper {
+
+        width: 530px;
+    }
+
+    .title h1 {
+
+        font-size: 3em;
+    }
+
+    .title h2 {
+    
+        font-size: 1.8em;
+    }
+
+    div#s3.lastItem {
+
+        margin-right: 18px;
+    }
+
+    div#s2, div#s4 {
+
+        margin-right: 0;
+    }
+
+    div.aboutMe {
+
+        width: 474px;
+    }
+
 }
 
 /* 480px and smaller */
 
 @media (max-width: 480px) {
 
+    .wrapper {
+        
+        width: 270px;
+    }
+
+    .title h1 {
+
+        font-size: 1.6em;
+    }
+
+    .title h2 {
+
+        font-size: 1.2em;
+    }
+
+    div.aboutMe {
+
+        width: 204px;
+    }
 }
+
+
+
+
+
