--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -536,6 +536,42 @@ div.aboutMe p {
 @media (max-width: 480px) {
 
     .wrapper {
+
+        width: 400px;
+    }
+
+    .title h1 {
+
+        font-size: 2.4em;
+    }
+
+    .title h2 {
+
+        font-size: 1.8em;
+    }
+
+    div.contactInfo ul {
+
+        margin-right: 24px;
+    }
+
+    div.screenWindow {
+
+        width: 260px;
+        margin: 0 auto;
+    }
+
+    div.aboutMe {
+
+        width: 348px;
+    }
+}
+
+/* 320px and smaller */
+
+@media (max-width: 320px) {
+
+    .wrapper {
         
         width: 270px;
     }
