--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -780,7 +780,7 @@ h1, h2, h3, h4, h5, h6 {
 .contactInfo ul {
 
     float: left;
-    margin-right: 0 64px 0 0;
+    margin-right: 64px;
     padding: 0;
 }
 
