--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -739,8 +739,18 @@ ul, li {
 
 .headingWrapper {
 
-    margin: 0 auto;
-    padding: 24px 0 0 0;
+    margin: 24px auto 0 0;
+    padding: 24px;
+
+    background: rgba(0,0,0, 0.25);
+    
+    -moz-border-radius: 8px;
+    -webkit-border-radius: 8px;
+    border-radius: 8px;
+
+    -moz-box-shadow: rgba(0,0,0, 0.2) 5px 5px 3px;
+    -webkit-box-shadow: rgba(0,0,0, 0.2) 5px 5px 3px;
+    box-shadow: rgba(0,0,0, 0.2) 5px 5px 3px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -780,6 +790,7 @@ h1, h2, h3, h4, h5, h6 {
 .contactInfo ul {
 
     float: left;
+    margin-bottom: 0;
     margin-right: 64px;
     padding: 0;
 }
