--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -832,8 +832,8 @@ h1, h2, h3, h4, h5, h6 {
     position: relative;
     float: left;
 
-    width: 244px;
-    height: 188px;
+    width: 228px;
+    height: 172px;
 
     margin: 0 18px 36px 0;
 
@@ -847,6 +847,17 @@ h1, h2, h3, h4, h5, h6 {
     box-shadow: rgba(0,0,0, 0.2) 5px 5px 3px;
     -moz-box-shadow: rgba(0,0,0, 0.2) 5px 5px 3px;
     -webkit-box-shadow: rgba(0,0,0, 0.2) 5px 5px 3px;
+}
+
+.icon-zoom-in {
+
+    font-size: 24px;
+    padding: 8px;
+    text-align: right;
+
+    -moz-text-shadow: 0 2px 2px rgba(0,0,0, 0.4);
+    -webkit-text-shadow: 0 2px 2px rgba(0,0,0, 0.4);
+    text-shadow: 0 2px 2px rgba(0,0,0, 0.4);
 }
 
 .screenWindow .lastItem {
@@ -866,8 +877,10 @@ h1, h2, h3, h4, h5, h6 {
     position: relative;
     z-index: 2;
    
-    width: 100%;
-    height: 100%;
+    width: 252px;
+    height: 196px;
+
+    margin: -36px 0 0 -12px;
 
     font-size: 0;
     color: transparent;
@@ -915,17 +928,19 @@ div.description {
     width: 224px;
     height: 53px;
 
-    margin-top: -73px;
+    margin: -77px 0 0 -8px;;
     padding: 10px;
 
     -moz-border-radius: 0 0 4px 4px;
     -webkit-border-radius: 0 0 4px 4px;
     border-radius: 0 0 4px 4px;
+
+    color: white;
 }
 
 div#s4 div.description {
 
-    margin-top: -102px;
+    margin-top: -107px;
     height: 82px;
 }
 
