--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -851,7 +851,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .icon-zoom-in {
 
-    font-size: 24px;
+    font-size: 18px;
     padding: 8px;
     text-align: right;
 
@@ -928,7 +928,7 @@ div.description {
     width: 224px;
     height: 53px;
 
-    margin: -77px 0 0 -8px;;
+    margin: -71px 0 0 -8px;;
     padding: 10px;
 
     -moz-border-radius: 0 0 4px 4px;
@@ -940,14 +940,14 @@ div.description {
 
 div#s4 div.description {
 
-    margin-top: -107px;
+    margin-top: -100px;
     height: 82px;
 }
 
 div.description div.projectTitle {
 
     font-family: "Georgia", serif;
-    font-size: 16pt;
+    font-size: 20px;
     line-height: 22pt;
 }
 
@@ -1163,53 +1163,53 @@ div.aboutMe p {
 
 /* 480px and smaller */
 
-@media (max-width: 480px) {
+/*@media (max-width: 480px) {*/
 
-    .wrapper {
+    /*.wrapper {*/
 
-        width: 400px;
-    }
+        /*width: 400px;*/
+    /*}*/
 
-    .headingWrapper {
+    /*.headingWrapper {*/
 
-        width: 348px;
-    }
+        /*width: 348px;*/
+    /*}*/
 
-    .title h1 {
+    /*.title h1 {*/
 
-        font-size: 2.2em;
-    }
+        /*font-size: 2.2em;*/
+    /*}*/
 
-    .title h2 {
+    /*.title h2 {*/
 
-        font-size: 1.5em;
-    }
+        /*font-size: 1.5em;*/
+    /*}*/
 
-    div.contactInfo ul {
+    /*div.contactInfo ul {*/
     
-        margin: 0;
-    }
+        /*margin: 0;*/
+    /*}*/
 
-    div.contactInfo ul:first-child {
+    /*div.contactInfo ul:first-child {*/
 
-        margin-right: 38px;
-    }
+        /*margin-right: 38px;*/
+    /*}*/
 
-    div.screenWindow {
+    /*div.screenWindow {*/
 
-        width: 260px;
-        margin: 0 auto;
-    }
+        /*width: 260px;*/
+        /*margin: 0 auto;*/
+    /*}*/
 
-    div.aboutMe {
+    /*div.aboutMe {*/
 
-        width: 348px;
-    }
-}
+        /*width: 348px;*/
+    /*}*/
+/*}*/
 
-/* 320px and smaller */
+/* 480px and smaller */
 
-@media (max-width: 320px) {
+@media (max-width: 480px) {
 
     .wrapper {
         
