fixing media queries

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1112,104 +1112,58 @@ div.aboutMe p {
 
 /* Kindle Fire browser */
 
-@media (min-width: 600px) and (max-width: 600px) {
-
-    .wrapper {
-
-        width: 530px;
-    }
-
-    .headingWrapper {
-
-        width: 474px;
-    }
-
-    .title h1 {
-
-        font-size: 3em;
-    }
-
-    .title h2 {
-    
-        font-size: 1.8em;
-    }
-
-    .contactInfo ul:first-child {
-
-        margin-right: 55px;
-    }
-
-    div#s3.lastItem {
-
-        margin-right: 18px;
-    }
-
-    div#s2, div#s4 {
-
-        margin-right: 0;
-    }
-
-    div#s5 div.description div.projectTitle {
-
-        font-size: 14pt;
-    }
-
-    div.aboutMe {
-
-        width: 474px;
-    }
-
-}
-
-/* 480px and smaller */
-
-/*@media (max-width: 480px) {*/
+/*@media (min-width: 600px) and (max-width: 600px) {*/
 
     /*.wrapper {*/
 
-        /*width: 400px;*/
+        /*width: 530px;*/
     /*}*/
 
     /*.headingWrapper {*/
 
-        /*width: 348px;*/
+        /*width: 474px;*/
     /*}*/
 
     /*.title h1 {*/
 
-        /*font-size: 2.2em;*/
+        /*font-size: 3em;*/
     /*}*/
 
     /*.title h2 {*/
-
-        /*font-size: 1.5em;*/
-    /*}*/
-
-    /*div.contactInfo ul {*/
     
-        /*margin: 0;*/
+        /*font-size: 1.8em;*/
     /*}*/
 
-    /*div.contactInfo ul:first-child {*/
+    /*.contactInfo ul:first-child {*/
 
-        /*margin-right: 38px;*/
+        /*margin-right: 55px;*/
     /*}*/
 
-    /*div.screenWindow {*/
+    /*div#s3.lastItem {*/
 
-        /*width: 260px;*/
-        /*margin: 0 auto;*/
+        /*margin-right: 18px;*/
+    /*}*/
+
+    /*div#s2, div#s4 {*/
+
+        /*margin-right: 0;*/
+    /*}*/
+
+    /*div#s5 div.description div.projectTitle {*/
+
+        /*font-size: 14pt;*/
     /*}*/
 
     /*div.aboutMe {*/
 
-        /*width: 348px;*/
+        /*width: 474px;*/
     /*}*/
+
 /*}*/
 
-/* 480px and smaller */
+/* 530px and smaller */
 
-@media (max-width: 480px) {
+@media (max-width: 530px) {
 
     .wrapper {
         
